K8S/mssql-plat-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mssql-dmapp
  template:
    metadata:
      labels:
        app: mssql-dmapp
    spec:
      containers:
        - name: mssql-dmapp
          image: mcr.microsoft.com/mssql/server:2019-latest
          ports:
            - containerPort: 1433
          volumeMounts:
            - name: mssql-dmapp-data
              mountPath: /var/opt/mssql/data
      volumes:
        - name: mssql-dmapp-data
          persistentVolumeClaim:
            claimName: mssql-claim-dmapp
---
apiVersion: v1
kind: Service
metadata:
  name: mssql-dmapp-cluster-ip-src
spec:
  type: ClusterIP
  selector:
    app: mssql-dmapp
  ports:
    - name: mssql-dmapp
      protocol: TCP
      port: 1433
      targetPort: 1433
---
apiVersion: v1
kind: Service
metadata:
  name: mssql-dmapp-load-balancer
spec:
  type: LoadBalancer
  selector:
    app: mssql-dmapp
  ports:
    - name: mssql-dmapp
      protocol: TCP
      port: 1433
      targetPort: 1433
