K8S/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-microsrvice-ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: dotnetmicrosrvtestapp.dev
      http:
        paths:
          - path: /api/platforms
            pathType: Prefix
            backend:
              service:
                name: platform-cluster-ip-service
                port:
                  number: 80
          - path: /api/c/platforms
            pathType: Prefix
            backend:
              service:
                name: command-cluster-ip-service
                port:
                  number: 80
